staged-deployment/5-opensearch/opensearch-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboard
spec:
  selector:
    app: opensearch-dashboard
  ports:
  - port: 5601
    targetPort: 5601
    protocol: TCP
    name: dashboard
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dashboard
spec:
  selector:
    matchLabels:
      app: opensearch-dashboard
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: opensearch-dashboard
    spec:
      containers:
      - image: opensearchproject/opensearch-dashboards:latest
        name: dashboard
        ports:
        - containerPort: 5601
          name: dashboard
        volumeMounts:
        - name: dashboard-config
          mountPath: /usr/share/opensearch-dashboards/config/opensearch_dashboards.yml
          subPath: opensearch_dashboards.yml
          readOnly: true
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "1Gi"
            cpu: "500m"
            ephemeral-storage: "2Gi"
      volumes:
      - name: dashboard-config
        configMap:
          name: opensearch-dashboard-config
