staged-deployment/5-opensearch/opensearch-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-node
spec:
  ports:
  - port: 9200
    targetPort: 9200
    protocol: TCP
    name: api
  - port: 9600
    targetPort: 9600
    protocol: TCP
    name: performance
  selector:
    app: opensearch-node

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-node
spec:
  selector:
    matchLabels:
      app: opensearch-node
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: opensearch-node
    spec:
      containers:
      - image: opensearchproject/opensearch:latest
        name: opensearch-node
        ports:
        - containerPort: 9200
          name: api
        - containerPort: 9600
          name: performance
        resources:
          requests:
            memory: "3Gi"
            cpu: "500m"
            ephemeral-storage: "6Gi"
          limits:
            memory: "8Gi"
            cpu: "1000m"
            ephemeral-storage: "8Gi"
        # securityContext:
        #   capabilities:
        #     add: ["IPC_LOCK"]
